--- a/Artonia_v2/static/styles/details.css
+++ b/Artonia_v2/static/styles/details.css
@@ -39,10 +39,11 @@ h4 {
     text-align: center;
 }
 
+
 p {
     text-align: center;
     font-size: 14px;
-    color: #ffb700;
+    color: black;
 }
 
 span {
