--- a/Artonia_v2/static/styles/workshop_details.css
+++ b/Artonia_v2/static/styles/workshop_details.css
@@ -34,7 +34,7 @@
 .workshop-current-details {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 20px;
     text-align: center;
 }
 
