--- a/Artonia_v2/static/styles/workshops.css
+++ b/Artonia_v2/static/styles/workshops.css
@@ -15,7 +15,7 @@
 
 .workshops-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     margin-bottom: 1rem;
 }
@@ -23,6 +23,8 @@
 .workshops-header h1 {
     font-size: 1.5rem;
     margin: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 
