--- a/Artonia_v2/templates/index.html
+++ b/Artonia_v2/templates/index.html
@@ -8,7 +8,7 @@
             <h1>
                 Amazing Handmade Products <br/>Choose the best idea!
             </h1>
-            <img src="{% static 'images/Artonia Logo.jpg' %}" alt="home"/>
+            <img  src="{% static 'images/Artonia Logo Colourful.jpg' %}" alt="home"/>
         </section>
     </main>
 {% endblock %}
