--- a/Artonia_v2/static/styles/navigation.css
+++ b/Artonia_v2/static/styles/navigation.css
@@ -118,11 +118,14 @@ nav a {
 }
 
 .logo-text {
-    color: #4B0082;
     font-size: 1.5rem;
-    font-family: cursive;
-    font-weight: bold;
+    font-family: fantasy;
+    color: #5e514d;
+    font-weight: 100;
     text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+    transition: color 0.3s ease, font-size 0.3s ease;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 nav a:hover {
