CSS Feature: Registration Label is added

--- a/Artonia_v2/templates/workshops/workshop_list.html
+++ b/Artonia_v2/templates/workshops/workshop_list.html
@@ -13,6 +13,9 @@
     <div class="workshops-grid">
         {% for workshop in workshops %}
             <div class="workshop-card">
+                {% if request.user in workshop.participants.all %}
+                    <div class="registered-label">Registered</div>
+                {% endif %}
                 <h3 style="color: darkblue">{{ workshop.title }}</h3>
                 {% if workshop.image_url %}
                     <div class="workshop-image">
