--- a/Artonia_v2/static/styles/workshops.css
+++ b/Artonia_v2/static/styles/workshops.css
@@ -271,3 +271,14 @@
     background-color: #3e8e41;
 }
 
+.registered-label {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: yellow;
+    color: black;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 4px;
+}
