--- a/Artonia_v2/static/styles/workshop_details.css
+++ b/Artonia_v2/static/styles/workshop_details.css
@@ -48,6 +48,7 @@
 .workshop-buttons {
     display: flex;
     justify-content: center;
+    text-decoration: none;
     gap: 10px; /* Adds spacing between buttons */
     margin-top: 20px; /* Optional: Add spacing above the buttons */
 }
@@ -66,6 +67,7 @@
 
 .workshop-buttons a.view-button:hover {
     background-color: #0056b3;
+    text-decoration: none;
 }
 
 .workshop-current-details ul {
