Fearure: Intructor Group logic is implemented

--- a/Artonia_v2/templates/registration/details-account.html
+++ b/Artonia_v2/templates/registration/details-account.html
@@ -25,7 +25,8 @@
                     />
                 {% endif %}
                 <!-- User's full name -->
-                <p id="details-title">{{ user.first_name }} {{ user.last_name }}</p>
+                <p id="details-title">Full Name: {{ user.first_name }} {{ user.last_name }}</p>
+                <p id="details-title">Username: {{ user.username }}</p>
 
                 <div id="info-wrapper">
                     <div id="details-description">
