--- a/Artonia_v2/templates/base.html
+++ b/Artonia_v2/templates/base.html
@@ -25,8 +25,8 @@
             {% if request.user.is_authenticated %}
                 <div>
                     <a style="text-decoration: none" href="{% url 'dashboard' %}">Dashboard</a>
-                    <a style="text-decoration: none" href="{% url 'create_macrame' %}">New Macrame</a>
-                    <a style="text-decoration: none" href="{% url 'create-art-painting' %}">New Art Painting</a>
+{#                    <a style="text-decoration: none" href="{% url 'create_macrame' %}">New Macrame</a>#}
+{#                    <a style="text-decoration: none" href="{% url 'create-art-painting' %}">New Art Painting</a>#}
                     <a style="text-decoration: none" href="{% url 'workshop-list' %}">Workshops</a>
                     <a style="text-decoration: none" href="{% url 'user_details' user.pk %}">Profile</a>
 
